tests/miniJava/neg/006776_mutation.MiniJava
class java public int [] java ( ) { return 0 ; } public static void Main ( String [ ] java ) { { } } }
